--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,35 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
  
 @layer base {
   :root {
@@ -65,7 +36,7 @@ body {
   }
  
   .dark {
-    --background: 222.2 84% 4.9%;
+    --background: 240 8% 7%;
     --foreground: 210 40% 98%;
  
     --card: 222.2 84% 4.9%;
@@ -77,11 +48,11 @@ body {
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
  
-    --secondary: 217.2 32.6% 17.5%;
+    --secondary: 240, 11%, 11%, 1;
     --secondary-foreground: 210 40% 98%;
  
     --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
+    --muted-foreground: 225, 7%, 43%;
  
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
@@ -90,6 +61,7 @@ body {
     --destructive-foreground: 210 40% 98%;
  
     --border: 217.2 32.6% 17.5%;
+    --border: 220 15% 13%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
