--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -49,7 +49,7 @@
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
  
-    --primary: 210 40% 98%;
+    --primary: 226 22% 85%;
     --primary-foreground: 222.2 47.4% 11.2%;
  
     --secondary: 240, 11%, 11%, 1;
@@ -76,7 +76,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-textBase;
   }
 }
 
@@ -84,17 +84,19 @@
   .typo-label {
     @apply text-[15px] font-semibold uppercase leading-none text-muted-foreground;
   }
+}
+
+@layer utilities {
+  .scroll-x-hidden {
+    scrollbar-width: none;
+  }
   
-  .default-border-divider {
-    @apply 
+  .scroll-x-hidden::-webkit-scrollbar {
+    display: none;
+    height: 0 !important;
   }
 }
 
-.scroll-x-hidden {
-  scrollbar-width: none;
-}
-
-.scroll-x-hidden::-webkit-scrollbar {
-  display: none;
-  height: 0 !important;
+.swiper-wrapper {
+  @apply cursor-default
 }
